# clove

./: .claude-code-ultimate.yaml  .gitignore  BUILD_ALL.sh  BUILD_GUIDE.md  CLAUDE.md  CODE_FIXES_COMPLETE.md  COLLABORATION_README.md  DEMO_AUDIO_PHYSICS.md  EDITOR_AUDIT_REPORT.md  EVERYTHING_COMPLETE.md  FINAL_20_PERCENT_ROADMAP.md  FOUNDATION_README.md  GUI_INTEGRATION_README.md  HANDMADE_ENGINE_COMPLETE.md  INTEGRATION_AUDIT.md  MASTER_PLAN.md  MILESTONE_NEURAL_NPC_DEMO.md  Makefile  NEURAL_VILLAGE_TECH_DEMO.md  PARTNER_SUMMARY.md  PERFORMANCE_REPORT.md  PHYSICS_2D_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  RECORD_TECH_DEMO.md  RUN_LEARNING_DEMO.sh  SENIOR_DEV_NOTES.md  STREAMING_SYSTEM_COMPLETE.md  TECH_DEMO_PRESENTATION.sh  THREADING_README.md  VALIDATION_REPORT.md  benchmark_streaming.c  build.sh  build_alpha.sh  build_editor.sh  build_editor_final.sh  build_enhanced_editor.sh  build_game.sh  build_integrated_editor.sh  build_minimal.sh  (+110 more)
.claude/: CURRENT_STATE.md  chain_gang.sh  claude-code-real.sh  claude_files.txt  compile_errors.txt  compile_test.md  drill_sergeant.py  no_context_attempt.txt  test_functions.md  test_prompt.md
archive/: Cargo.toml  hrm-dnc-web-integration.py
archive_root/: .claude-code-config.yaml  editor_gui.c  editor_hotreload.c  editor_main.c  editor_with_gizmos.c  handmade_physics_2d.c  handmade_platform_linux.c  handmade_profiler_display.c  integrated_editor.c  main_minimal_physics_audio.c  neural_village_alpha.c  neural_village_alpha_fixed.c  neural_village_alpha_learning.c  neural_village_emergent.c  neural_village_smooth.c  (+10 more)
(+529 files in other folders)
